Update notebook.sh